parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> declaration_statement
Rule 5     statement -> synonym_statement
Rule 6     statement -> newmode_statement
Rule 7     statement -> procedure_statement
Rule 8     statement -> action_statement
Rule 9     declaration_statement -> DCL declaration_list SEMI
Rule 10    declaration_list -> declaration
Rule 11    declaration_list -> declaration_list COMMA declaration
Rule 12    declaration -> identifier_list mode
Rule 13    declaration -> identifier_list mode initialization
Rule 14    initialization -> EQUALS expression
Rule 15    identifier_list -> identifier
Rule 16    identifier_list -> identifier_list COMMA identifier
Rule 17    identifier -> ID
Rule 18    synonym_statement -> SYN synonym_list SEMI
Rule 19    synonym_list -> synonym_definition
Rule 20    synonym_list -> synonym_list COMMA synonym_definition
Rule 21    synonym_definition -> identifier_list mode EQUALS constant_expression
Rule 22    synonym_definition -> identifier_list EQUALS constant_expression
Rule 23    constant_expression -> expression
Rule 24    newmode_statement -> TYPE newmode_list SEMI
Rule 25    newmode_list -> mode_definition
Rule 26    newmode_list -> newmode_list COMMA mode_definition
Rule 27    mode_definition -> identifier_list EQUALS mode
Rule 28    mode -> identifier
Rule 29    mode -> discrete_mode
Rule 30    mode -> reference_mode
Rule 31    mode -> composite_mode
Rule 32    discrete_mode -> integer_mode
Rule 33    discrete_mode -> boolean_mode
Rule 34    discrete_mode -> character_mode
Rule 35    discrete_mode -> discrete_range_mode
Rule 36    integer_mode -> INT
Rule 37    boolean_mode -> BOOL
Rule 38    character_mode -> CHAR
Rule 39    discrete_range_mode -> identifier LPAREN literal_range RPAREN
Rule 40    discrete_range_mode -> discrete_mode LPAREN literal_range RPAREN
Rule 41    literal_range -> expression COLON expression
Rule 42    reference_mode -> REF mode
Rule 43    composite_mode -> string_mode
Rule 44    composite_mode -> array_mode
Rule 45    string_mode -> CHARS LBRACKET integer_literal RBRACKET
Rule 46    array_mode -> ARRAY LBRACKET list_index_mode RBRACKET mode
Rule 47    list_index_mode -> index_mode
Rule 48    list_index_mode -> list_index_mode COMMA index_mode
Rule 49    index_mode -> discrete_mode
Rule 50    index_mode -> literal_range
Rule 51    location -> identifier
Rule 52    location -> dereferenced_reference
Rule 53    location -> array_element
Rule 54    location -> array_slice
Rule 55    location -> call_action
Rule 56    dereferenced_reference -> location ARROW
Rule 57    array_element -> array_location LBRACKET expression_list RBRACKET
Rule 58    expression_list -> expression
Rule 59    expression_list -> expression_list COMMA expression
Rule 60    array_slice -> array_location LBRACKET expression COLON expression RBRACKET
Rule 61    array_location -> location
Rule 62    primitive_value -> literal
Rule 63    primitive_value -> value_array_element
Rule 64    primitive_value -> value_array_slice
Rule 65    primitive_value -> parenthesized_expression
Rule 66    literal -> integer_literal
Rule 67    literal -> boolean_literal
Rule 68    literal -> character_literal
Rule 69    literal -> empty_literal
Rule 70    literal -> character_string_literal
Rule 71    integer_literal -> ICONST
Rule 72    boolean_literal -> FALSE
Rule 73    boolean_literal -> TRUE
Rule 74    character_literal -> CCONST
Rule 75    empty_literal -> NULL
Rule 76    character_string_literal -> SCONST
Rule 77    value_array_element -> array_primitive_value LBRACKET expression_list RBRACKET
Rule 78    value_array_slice -> array_primitive_value LBRACKET expression COLON expression RBRACKET
Rule 79    array_primitive_value -> primitive_value
Rule 80    parenthesized_expression -> LPAREN expression RPAREN
Rule 81    expression -> operand0
Rule 82    expression -> conditional_expression
Rule 83    conditional_expression -> IF boolean_expression then_expression else_expression FI
Rule 84    conditional_expression -> IF boolean_expression then_expression elsif_expression else_expression FI
Rule 85    boolean_expression -> expression
Rule 86    then_expression -> THEN expression
Rule 87    else_expression -> ELSE expression
Rule 88    elsif_expression -> ELSIF boolean_expression then_expression
Rule 89    elsif_expression -> elsif_expression ELSIF boolean_expression then_expression
Rule 90    operand0 -> operand1
Rule 91    operand0 -> operand0 operator1 operand1
Rule 92    operator1 -> relational_operator
Rule 93    operator1 -> membership_operator
Rule 94    relational_operator -> AND
Rule 95    relational_operator -> OR
Rule 96    relational_operator -> EQ
Rule 97    relational_operator -> NE
Rule 98    relational_operator -> GT
Rule 99    relational_operator -> GEQ
Rule 100   relational_operator -> LT
Rule 101   relational_operator -> LEQ
Rule 102   membership_operator -> IN
Rule 103   operand1 -> operand2
Rule 104   operand1 -> operand1 arithmetic_additive_operator operand2
Rule 105   operand1 -> operand1 string_concatenation_operator operand2
Rule 106   arithmetic_additive_operator -> PLUS
Rule 107   arithmetic_additive_operator -> MINUS
Rule 108   string_concatenation_operator -> LAND
Rule 109   operand2 -> operand3
Rule 110   operand2 -> operand2 arithmetic_multiplicative_operator operand3
Rule 111   arithmetic_multiplicative_operator -> TIMES
Rule 112   arithmetic_multiplicative_operator -> DIVIDE
Rule 113   arithmetic_multiplicative_operator -> MODULO
Rule 114   operand3 -> operand4
Rule 115   operand3 -> monadic_operator operand4
Rule 116   monadic_operator -> MINUS
Rule 117   monadic_operator -> NOT
Rule 118   operand4 -> location
Rule 119   operand4 -> referenced_location
Rule 120   operand4 -> primitive_value
Rule 121   referenced_location -> ARROW location
Rule 122   action_statement -> action SEMI
Rule 123   action_statement -> identifier COLON action SEMI
Rule 124   action -> bracketed_action
Rule 125   action -> assignment_action
Rule 126   action -> call_action
Rule 127   action -> exit_action
Rule 128   action -> return_action
Rule 129   action -> result_action
Rule 130   bracketed_action -> if_action
Rule 131   bracketed_action -> do_action
Rule 132   assignment_action -> location assigning_operator expression
Rule 133   assigning_operator -> EQUALS
Rule 134   assigning_operator -> PLUS EQUALS
Rule 135   assigning_operator -> MINUS EQUALS
Rule 136   assigning_operator -> TIMES EQUALS
Rule 137   assigning_operator -> DIVIDE EQUALS
Rule 138   assigning_operator -> MODULO EQUALS
Rule 139   assigning_operator -> LAND EQUALS
Rule 140   if_action -> IF boolean_expression then_clause FI
Rule 141   if_action -> IF boolean_expression then_clause else_clause FI
Rule 142   then_clause -> THEN action_statement_list
Rule 143   action_statement_list -> action_statement
Rule 144   action_statement_list -> action_statement_list action_statement
Rule 145   else_clause -> ELSE action_statement_list
Rule 146   else_clause -> ELSIF boolean_expression then_clause
Rule 147   else_clause -> ELSIF boolean_expression then_clause else_clause
Rule 148   do_action -> DO action_statement_list OD
Rule 149   do_action -> DO control_part SEMI action_statement_list OD
Rule 150   control_part -> for_control
Rule 151   control_part -> for_control while_control
Rule 152   control_part -> while_control
Rule 153   for_control -> FOR iteration
Rule 154   iteration -> step_enumeration
Rule 155   iteration -> range_enumeration
Rule 156   step_enumeration -> identifier EQUALS start_value end_value
Rule 157   step_enumeration -> identifier EQUALS start_value step_value end_value
Rule 158   step_enumeration -> identifier EQUALS start_value DOWN end_value
Rule 159   step_enumeration -> identifier EQUALS start_value step_value DOWN end_value
Rule 160   start_value -> expression
Rule 161   step_value -> BY expression
Rule 162   end_value -> TO expression
Rule 163   range_enumeration -> identifier IN discrete_range_mode
Rule 164   range_enumeration -> identifier DOWN IN discrete_range_mode
Rule 165   while_control -> WHILE boolean_expression
Rule 166   call_action -> procedure_call
Rule 167   call_action -> builtin_call
Rule 168   procedure_call -> identifier LPAREN RPAREN
Rule 169   procedure_call -> identifier LPAREN parameter_list RPAREN
Rule 170   parameter_list -> parameter
Rule 171   parameter_list -> parameter_list COMMA parameter
Rule 172   parameter -> expression
Rule 173   exit_action -> EXIT identifier
Rule 174   return_action -> RETURN
Rule 175   return_action -> RETURN result
Rule 176   result_action -> RESULT result
Rule 177   result -> expression
Rule 178   builtin_call -> builtin_name LPAREN RPAREN
Rule 179   builtin_call -> builtin_name LPAREN parameter_list RPAREN
Rule 180   builtin_name -> ABS
Rule 181   builtin_name -> ASC
Rule 182   builtin_name -> NUM
Rule 183   builtin_name -> UPPER
Rule 184   builtin_name -> LOWER
Rule 185   builtin_name -> LENGTH
Rule 186   builtin_name -> READ
Rule 187   builtin_name -> PRINT
Rule 188   procedure_statement -> identifier COLON procedure_definition SEMI
Rule 189   procedure_definition -> PROC LPAREN RPAREN SEMI statement_list END
Rule 190   procedure_definition -> PROC LPAREN formal_parameter_list RPAREN SEMI statement_list END
Rule 191   procedure_definition -> PROC LPAREN RPAREN result_spec SEMI statement_list END
Rule 192   procedure_definition -> PROC LPAREN formal_parameter_list RPAREN result_spec SEMI statement_list END
Rule 193   formal_parameter_list -> formal_parameter
Rule 194   formal_parameter_list -> formal_parameter_list COMMA formal_parameter
Rule 195   formal_parameter -> identifier_list parameter_spec
Rule 196   parameter_spec -> mode
Rule 197   parameter_spec -> mode LOC
Rule 198   result_spec -> RETURNS LPAREN mode RPAREN
Rule 199   result_spec -> RETURNS LPAREN mode LOC RPAREN

Terminals, with rules where they appear

ABS                  : 180
AND                  : 94
ARRAY                : 46
ARROW                : 56 121
ASC                  : 181
BOOL                 : 37
BY                   : 161
CCONST               : 74
CHAR                 : 38
CHARS                : 45
COLON                : 41 60 78 123 188
COMMA                : 11 16 20 26 48 59 171 194
DCL                  : 9
DIVIDE               : 112 137
DO                   : 148 149
DOWN                 : 158 159 164
ELSE                 : 87 145
ELSIF                : 88 89 146 147
END                  : 189 190 191 192
EQ                   : 96
EQUALS               : 14 21 22 27 133 134 135 136 137 138 139 156 157 158 159
EXIT                 : 173
FALSE                : 72
FI                   : 83 84 140 141
FOR                  : 153
GEQ                  : 99
GT                   : 98
ICONST               : 71
ID                   : 17
IF                   : 83 84 140 141
IN                   : 102 163 164
INT                  : 36
LAND                 : 108 139
LBRACKET             : 45 46 57 60 77 78
LENGTH               : 185
LEQ                  : 101
LOC                  : 197 199
LOWER                : 184
LPAREN               : 39 40 80 168 169 178 179 189 190 191 192 198 199
LT                   : 100
MINUS                : 107 116 135
MODULO               : 113 138
NE                   : 97
NOT                  : 117
NULL                 : 75
NUM                  : 182
OD                   : 148 149
OR                   : 95
PLUS                 : 106 134
PRINT                : 187
PROC                 : 189 190 191 192
RBRACKET             : 45 46 57 60 77 78
READ                 : 186
REF                  : 42
RESULT               : 176
RETURN               : 174 175
RETURNS              : 198 199
RPAREN               : 39 40 80 168 169 178 179 189 190 191 192 198 199
SCONST               : 76
SEMI                 : 9 18 24 122 123 149 188 189 190 191 192
SYN                  : 18
THEN                 : 86 142
TIMES                : 111 136
TO                   : 162
TRUE                 : 73
TYPE                 : 24
UPPER                : 183
WHILE                : 165
error                : 

Nonterminals, with rules where they appear

action               : 122 123
action_statement     : 8 143 144
action_statement_list : 142 144 145 148 149
arithmetic_additive_operator : 104
arithmetic_multiplicative_operator : 110
array_element        : 53
array_location       : 57 60
array_mode           : 44
array_primitive_value : 77 78
array_slice          : 54
assigning_operator   : 132
assignment_action    : 125
boolean_expression   : 83 84 88 89 140 141 146 147 165
boolean_literal      : 67
boolean_mode         : 33
bracketed_action     : 124
builtin_call         : 167
builtin_name         : 178 179
call_action          : 55 126
character_literal    : 68
character_mode       : 34
character_string_literal : 70
composite_mode       : 31
conditional_expression : 82
constant_expression  : 21 22
control_part         : 149
declaration          : 10 11
declaration_list     : 9 11
declaration_statement : 4
dereferenced_reference : 52
discrete_mode        : 29 40 49
discrete_range_mode  : 35 163 164
do_action            : 131
else_clause          : 141 147
else_expression      : 83 84
elsif_expression     : 84 89
empty_literal        : 69
end_value            : 156 157 158 159
exit_action          : 127
expression           : 14 23 41 41 58 59 60 60 78 78 80 85 86 87 132 160 161 162 172 177
expression_list      : 57 59 77
for_control          : 150 151
formal_parameter     : 193 194
formal_parameter_list : 190 192 194
identifier           : 15 16 28 39 51 123 156 157 158 159 163 164 168 169 173 188
identifier_list      : 12 13 16 21 22 27 195
if_action            : 130
index_mode           : 47 48
initialization       : 13
integer_literal      : 45 66
integer_mode         : 32
iteration            : 153
list_index_mode      : 46 48
literal              : 62
literal_range        : 39 40 50
location             : 56 61 118 121 132
membership_operator  : 93
mode                 : 12 13 21 27 42 46 196 197 198 199
mode_definition      : 25 26
monadic_operator     : 115
newmode_list         : 24 26
newmode_statement    : 6
operand0             : 81 91
operand1             : 90 91 104 105
operand2             : 103 104 105 110
operand3             : 109 110
operand4             : 114 115
operator1            : 91
parameter            : 170 171
parameter_list       : 169 171 179
parameter_spec       : 195
parenthesized_expression : 65
primitive_value      : 79 120
procedure_call       : 166
procedure_definition : 188
procedure_statement  : 7
program              : 0
range_enumeration    : 155
reference_mode       : 30
referenced_location  : 119
relational_operator  : 92
result               : 175 176
result_action        : 129
result_spec          : 191 192
return_action        : 128
start_value          : 156 157 158 159
statement            : 2 3
statement_list       : 1 3 189 190 191 192
step_enumeration     : 154
step_value           : 157 159
string_concatenation_operator : 105
string_mode          : 43
synonym_definition   : 19 20
synonym_list         : 18 20
synonym_statement    : 5
then_clause          : 140 141 146 147
then_expression      : 83 84 88 89
value_array_element  : 63
value_array_slice    : 64
while_control        : 151 152

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . declaration_statement
    (5) statement -> . synonym_statement
    (6) statement -> . newmode_statement
    (7) statement -> . procedure_statement
    (8) statement -> . action_statement
    (9) declaration_statement -> . DCL declaration_list SEMI
    (18) synonym_statement -> . SYN synonym_list SEMI
    (24) newmode_statement -> . TYPE newmode_list SEMI
    (188) procedure_statement -> . identifier COLON procedure_definition SEMI
    (122) action_statement -> . action SEMI
    (123) action_statement -> . identifier COLON action SEMI
    (17) identifier -> . ID
    (124) action -> . bracketed_action
    (125) action -> . assignment_action
    (126) action -> . call_action
    (127) action -> . exit_action
    (128) action -> . return_action
    (129) action -> . result_action
    (130) bracketed_action -> . if_action
    (131) bracketed_action -> . do_action
    (132) assignment_action -> . location assigning_operator expression
    (166) call_action -> . procedure_call
    (167) call_action -> . builtin_call
    (173) exit_action -> . EXIT identifier
    (174) return_action -> . RETURN
    (175) return_action -> . RETURN result
    (176) result_action -> . RESULT result
    (140) if_action -> . IF boolean_expression then_clause FI
    (141) if_action -> . IF boolean_expression then_clause else_clause FI
    (148) do_action -> . DO action_statement_list OD
    (149) do_action -> . DO control_part SEMI action_statement_list OD
    (51) location -> . identifier
    (52) location -> . dereferenced_reference
    (53) location -> . array_element
    (54) location -> . array_slice
    (55) location -> . call_action
    (168) procedure_call -> . identifier LPAREN RPAREN
    (169) procedure_call -> . identifier LPAREN parameter_list RPAREN
    (178) builtin_call -> . builtin_name LPAREN RPAREN
    (179) builtin_call -> . builtin_name LPAREN parameter_list RPAREN
    (56) dereferenced_reference -> . location ARROW
    (57) array_element -> . array_location LBRACKET expression_list RBRACKET
    (60) array_slice -> . array_location LBRACKET expression COLON expression RBRACKET
    (180) builtin_name -> . ABS
    (181) builtin_name -> . ASC
    (182) builtin_name -> . NUM
    (183) builtin_name -> . UPPER
    (184) builtin_name -> . LOWER
    (185) builtin_name -> . LENGTH
    (186) builtin_name -> . READ
    (187) builtin_name -> . PRINT
    (61) array_location -> . location

    DCL             shift and go to state 10
    SYN             shift and go to state 24
    TYPE            shift and go to state 21
    ID              shift and go to state 6
    EXIT            shift and go to state 33
    RETURN          shift and go to state 27
    RESULT          shift and go to state 16
    IF              shift and go to state 26
    DO              shift and go to state 37
    ABS             shift and go to state 19
    ASC             shift and go to state 13
    NUM             shift and go to state 23
    UPPER           shift and go to state 4
    LOWER           shift and go to state 18
    LENGTH          shift and go to state 30
    READ            shift and go to state 12
    PRINT           shift and go to state 42

    program                        shift and go to state 1
    newmode_statement              shift and go to state 2
    array_slice                    shift and go to state 20
    return_action                  shift and go to state 11
    builtin_call                   shift and go to state 3
    array_element                  shift and go to state 25
    result_action                  shift and go to state 22
    dereferenced_reference         shift and go to state 29
    action                         shift and go to state 7
    if_action                      shift and go to state 38
    declaration_statement          shift and go to state 32
    identifier                     shift and go to state 8
    exit_action                    shift and go to state 9
    location                       shift and go to state 34
    action_statement               shift and go to state 35
    bracketed_action               shift and go to state 36
    array_location                 shift and go to state 39
    statement                      shift and go to state 31
    assignment_action              shift and go to state 14
    procedure_call                 shift and go to state 15
    statement_list                 shift and go to state 28
    builtin_name                   shift and go to state 40
    synonym_statement              shift and go to state 41
    do_action                      shift and go to state 5
    procedure_statement            shift and go to state 17
    call_action                    shift and go to state 43

state 1

    (0) S' -> program .



state 2

    (6) statement -> newmode_statement .

    END             reduce using rule 6 (statement -> newmode_statement .)
    DCL             reduce using rule 6 (statement -> newmode_statement .)
    SYN             reduce using rule 6 (statement -> newmode_statement .)
    TYPE            reduce using rule 6 (statement -> newmode_statement .)
    ID              reduce using rule 6 (statement -> newmode_statement .)
    EXIT            reduce using rule 6 (statement -> newmode_statement .)
    RETURN          reduce using rule 6 (statement -> newmode_statement .)
    RESULT          reduce using rule 6 (statement -> newmode_statement .)
    IF              reduce using rule 6 (statement -> newmode_statement .)
    DO              reduce using rule 6 (statement -> newmode_statement .)
    ABS             reduce using rule 6 (statement -> newmode_statement .)
    ASC             reduce using rule 6 (statement -> newmode_statement .)
    NUM             reduce using rule 6 (statement -> newmode_statement .)
    UPPER           reduce using rule 6 (statement -> newmode_statement .)
    LOWER           reduce using rule 6 (statement -> newmode_statement .)
    LENGTH          reduce using rule 6 (statement -> newmode_statement .)
    READ            reduce using rule 6 (statement -> newmode_statement .)
    PRINT           reduce using rule 6 (statement -> newmode_statement .)
    $end            reduce using rule 6 (statement -> newmode_statement .)


state 3

    (167) call_action -> builtin_call .

    ARROW           reduce using rule 167 (call_action -> builtin_call .)
    TIMES           reduce using rule 167 (call_action -> builtin_call .)
    DIVIDE          reduce using rule 167 (call_action -> builtin_call .)
    MODULO          reduce using rule 167 (call_action -> builtin_call .)
    PLUS            reduce using rule 167 (call_action -> builtin_call .)
    MINUS           reduce using rule 167 (call_action -> builtin_call .)
    LAND            reduce using rule 167 (call_action -> builtin_call .)
    AND             reduce using rule 167 (call_action -> builtin_call .)
    OR              reduce using rule 167 (call_action -> builtin_call .)
    EQ              reduce using rule 167 (call_action -> builtin_call .)
    NE              reduce using rule 167 (call_action -> builtin_call .)
    GT              reduce using rule 167 (call_action -> builtin_call .)
    GEQ             reduce using rule 167 (call_action -> builtin_call .)
    LT              reduce using rule 167 (call_action -> builtin_call .)
    LEQ             reduce using rule 167 (call_action -> builtin_call .)
    IN              reduce using rule 167 (call_action -> builtin_call .)
    ELSE            reduce using rule 167 (call_action -> builtin_call .)
    ELSIF           reduce using rule 167 (call_action -> builtin_call .)
    LBRACKET        reduce using rule 167 (call_action -> builtin_call .)
    WHILE           reduce using rule 167 (call_action -> builtin_call .)
    SEMI            reduce using rule 167 (call_action -> builtin_call .)
    EQUALS          reduce using rule 167 (call_action -> builtin_call .)
    THEN            reduce using rule 167 (call_action -> builtin_call .)
    RPAREN          reduce using rule 167 (call_action -> builtin_call .)
    COLON           reduce using rule 167 (call_action -> builtin_call .)
    DOWN            reduce using rule 167 (call_action -> builtin_call .)
    TO              reduce using rule 167 (call_action -> builtin_call .)
    COMMA           reduce using rule 167 (call_action -> builtin_call .)
    RBRACKET        reduce using rule 167 (call_action -> builtin_call .)
    BY              reduce using rule 167 (call_action -> builtin_call .)
    FI              reduce using rule 167 (call_action -> builtin_call .)


state 4

    (183) builtin_name -> UPPER .

    LPAREN          reduce using rule 183 (builtin_name -> UPPER .)


state 5

    (131) bracketed_action -> do_action .

    SEMI            reduce using rule 131 (bracketed_action -> do_action .)


state 6

    (17) identifier -> ID .

    LPAREN          reduce using rule 17 (identifier -> ID .)
    ARROW           reduce using rule 17 (identifier -> ID .)
    TIMES           reduce using rule 17 (identifier -> ID .)
    DIVIDE          reduce using rule 17 (identifier -> ID .)
    MODULO          reduce using rule 17 (identifier -> ID .)
    PLUS            reduce using rule 17 (identifier -> ID .)
    MINUS           reduce using rule 17 (identifier -> ID .)
    LAND            reduce using rule 17 (identifier -> ID .)
    AND             reduce using rule 17 (identifier -> ID .)
    OR              reduce using rule 17 (identifier -> ID .)
    EQ              reduce using rule 17 (identifier -> ID .)
    NE              reduce using rule 17 (identifier -> ID .)
    GT              reduce using rule 17 (identifier -> ID .)
    GEQ             reduce using rule 17 (identifier -> ID .)
    LT              reduce using rule 17 (identifier -> ID .)
    LEQ             reduce using rule 17 (identifier -> ID .)
    IN              reduce using rule 17 (identifier -> ID .)
    RPAREN          reduce using rule 17 (identifier -> ID .)
    COMMA           reduce using rule 17 (identifier -> ID .)
    LBRACKET        reduce using rule 17 (identifier -> ID .)
    SEMI            reduce using rule 17 (identifier -> ID .)
    THEN            reduce using rule 17 (identifier -> ID .)
    COLON           reduce using rule 17 (identifier -> ID .)
    RBRACKET        reduce using rule 17 (identifier -> ID .)
    ELSE            reduce using rule 17 (identifier -> ID .)
    ELSIF           reduce using rule 17 (identifier -> ID .)
    DOWN            reduce using rule 17 (identifier -> ID .)
    TO              reduce using rule 17 (identifier -> ID .)
    BY              reduce using rule 17 (identifier -> ID .)
    FI              reduce using rule 17 (identifier -> ID .)
    WHILE           reduce using rule 17 (identifier -> ID .)
    EQUALS          reduce using rule 17 (identifier -> ID .)
    ID              reduce using rule 17 (identifier -> ID .)
    REF             reduce using rule 17 (identifier -> ID .)
    INT             reduce using rule 17 (identifier -> ID .)
    BOOL            reduce using rule 17 (identifier -> ID .)
    CHAR            reduce using rule 17 (identifier -> ID .)
    CHARS           reduce using rule 17 (identifier -> ID .)
    ARRAY           reduce using rule 17 (identifier -> ID .)
    LOC             reduce using rule 17 (identifier -> ID .)


state 7

    (122) action_statement -> action . SEMI

    SEMI            shift and go to state 44


state 8

    (188) procedure_statement -> identifier . COLON procedure_definition SEMI
    (123) action_statement -> identifier . COLON action SEMI
    (51) location -> identifier .
    (168) procedure_call -> identifier . LPAREN RPAREN
    (169) procedure_call -> identifier . LPAREN parameter_list RPAREN

    COLON           shift and go to state 46
    ARROW           reduce using rule 51 (location -> identifier .)
    EQUALS          reduce using rule 51 (location -> identifier .)
    PLUS            reduce using rule 51 (location -> identifier .)
    MINUS           reduce using rule 51 (location -> identifier .)
    TIMES           reduce using rule 51 (location -> identifier .)
    DIVIDE          reduce using rule 51 (location -> identifier .)
    MODULO          reduce using rule 51 (location -> identifier .)
    LAND            reduce using rule 51 (location -> identifier .)
    LBRACKET        reduce using rule 51 (location -> identifier .)
    LPAREN          shift and go to state 45


state 9

    (127) action -> exit_action .

    SEMI            reduce using rule 127 (action -> exit_action .)


state 10

    (9) declaration_statement -> DCL . declaration_list SEMI
    (10) declaration_list -> . declaration
    (11) declaration_list -> . declaration_list COMMA declaration
    (12) declaration -> . identifier_list mode
    (13) declaration -> . identifier_list mode initialization
    (15) identifier_list -> . identifier
    (16) identifier_list -> . identifier_list COMMA identifier
    (17) identifier -> . ID

    ID              shift and go to state 6

    identifier_list                shift and go to state 47
    declaration                    shift and go to state 48
    declaration_list               shift and go to state 49
    identifier                     shift and go to state 50

state 11

    (128) action -> return_action .

    SEMI            reduce using rule 128 (action -> return_action .)


state 12

    (186) builtin_name -> READ .

    LPAREN          reduce using rule 186 (builtin_name -> READ .)


state 13

    (181) builtin_name -> ASC .

    LPAREN          reduce using rule 181 (builtin_name -> ASC .)


state 14

    (125) action -> assignment_action .

    SEMI            reduce using rule 125 (action -> assignment_action .)


state 15

    (166) call_action -> procedure_call .

    ARROW           reduce using rule 166 (call_action -> procedure_call .)
    TIMES           reduce using rule 166 (call_action -> procedure_call .)
    DIVIDE          reduce using rule 166 (call_action -> procedure_call .)
    MODULO          reduce using rule 166 (call_action -> procedure_call .)
    PLUS            reduce using rule 166 (call_action -> procedure_call .)
    MINUS           reduce using rule 166 (call_action -> procedure_call .)
    LAND            reduce using rule 166 (call_action -> procedure_call .)
    AND             reduce using rule 166 (call_action -> procedure_call .)
    OR              reduce using rule 166 (call_action -> procedure_call .)
    EQ              reduce using rule 166 (call_action -> procedure_call .)
    NE              reduce using rule 166 (call_action -> procedure_call .)
    GT              reduce using rule 166 (call_action -> procedure_call .)
    GEQ             reduce using rule 166 (call_action -> procedure_call .)
    LT              reduce using rule 166 (call_action -> procedure_call .)
    LEQ             reduce using rule 166 (call_action -> procedure_call .)
    IN              reduce using rule 166 (call_action -> procedure_call .)
    ELSE            reduce using rule 166 (call_action -> procedure_call .)
    ELSIF           reduce using rule 166 (call_action -> procedure_call .)
    LBRACKET        reduce using rule 166 (call_action -> procedure_call .)
    WHILE           reduce using rule 166 (call_action -> procedure_call .)
    SEMI            reduce using rule 166 (call_action -> procedure_call .)
    EQUALS          reduce using rule 166 (call_action -> procedure_call .)
    THEN            reduce using rule 166 (call_action -> procedure_call .)
    RPAREN          reduce using rule 166 (call_action -> procedure_call .)
    COLON           reduce using rule 166 (call_action -> procedure_call .)
    DOWN            reduce using rule 166 (call_action -> procedure_call .)
    TO              reduce using rule 166 (call_action -> procedure_call .)
    COMMA           reduce using rule 166 (call_action -> procedure_call .)
    RBRACKET        reduce using rule 166 (call_action -> procedure_call .)
    BY              reduce using rule 166 (call_action -> procedure_call .)
    FI              reduce using rule 166 (call_action -> procedure_call .)


state 16

    (176) result_action -> RESULT . result
    (177) result -> . expression
    (81) expression -> . operand0
    (82) expression -> . conditional_expression
    (90) operand0 -> . operand1
    (91) operand0 -> . operand0 operator1 operand1
    (83) conditional_expression -> . IF boolean_expression then_expression else_expression FI
    (84) conditional_expression -> . IF boolean_expression then_expression elsif_expression else_expression FI
    (103) operand1 -> . operand2
    (104) operand1 -> . operand1 arithmetic_additive_operator operand2
    (105) operand1 -> . operand1 string_concatenation_operator operand2
    (109) operand2 -> . operand3
    (110) operand2 -> . operand2 arithmetic_multiplicative_operator operand3
    (114) operand3 -> . operand4
    (115) operand3 -> . monadic_operator operand4
    (118) operand4 -> . location
    (119) operand4 -> . referenced_location
    (120) operand4 -> . primitive_value
    (116) monadic_operator -> . MINUS
    (117) monadic_operator -> . NOT
    (51) location -> . identifier
    (52) location -> . dereferenced_reference
    (53) location -> . array_element
    (54) location -> . array_slice
    (55) location -> . call_action
    (121) referenced_location -> . ARROW location
    (62) primitive_value -> . literal
    (63) primitive_value -> . value_array_element
    (64) primitive_value -> . value_array_slice
    (65) primitive_value -> . parenthesized_expression
    (17) identifier -> . ID
    (56) dereferenced_reference -> . location ARROW
    (57) array_element -> . array_location LBRACKET expression_list RBRACKET
    (60) array_slice -> . array_location LBRACKET expression COLON expression RBRACKET
    (166) call_action -> . procedure_call
    (167) call_action -> . builtin_call
    (66) literal -> . integer_literal
    (67) literal -> . boolean_literal
    (68) literal -> . character_literal
    (69) literal -> . empty_literal
    (70) literal -> . character_string_literal
    (77) value_array_element -> . array_primitive_value LBRACKET expression_list RBRACKET
    (78) value_array_slice -> . array_primitive_value LBRACKET expression COLON expression RBRACKET
    (80) parenthesized_expression -> . LPAREN expression RPAREN
    (61) array_location -> . location
    (168) procedure_call -> . identifier LPAREN RPAREN
    (169) procedure_call -> . identifier LPAREN parameter_list RPAREN
    (178) builtin_call -> . builtin_name LPAREN RPAREN
    (179) builtin_call -> . builtin_name LPAREN parameter_list RPAREN
    (71) integer_literal -> . ICONST
    (72) boolean_literal -> . FALSE
    (73) boolean_literal -> . TRUE
    (74) character_literal -> . CCONST
    (75) empty_literal -> . NULL
    (76) character_string_literal -> . SCONST
    (79) array_primitive_value -> . primitive_value
    (180) builtin_name -> . ABS
    (181) builtin_name -> . ASC
    (182) builtin_name -> . NUM
    (183) builtin_name -> . UPPER
    (184) builtin_name -> . LOWER
    (185) builtin_name -> . LENGTH
    (186) builtin_name -> . READ
    (187) builtin_name -> . PRINT

    IF              shift and go to state 74
    MINUS           shift and go to state 53
    NOT             shift and go to state 52
    ARROW           shift and go to state 76
    ID              shift and go to state 6
    LPAREN          shift and go to state 77
    ICONST          shift and go to state 70
    FALSE           shift and go to state 59
    TRUE            shift and go to state 61
    CCONST          shift and go to state 83
    NULL            shift and go to state 78
    SCONST          shift and go to state 64
    ABS             shift and go to state 19
    ASC             shift and go to state 13
    NUM             shift and go to state 23
    UPPER           shift and go to state 4
    LOWER           shift and go to state 18
    LENGTH          shift and go to state 30
    READ            shift and go to state 12
    PRINT           shift and go to state 42

    monadic_operator               shift and go to state 51
    array_location                 shift and go to state 39
    empty_literal                  shift and go to state 72
    value_array_slice              shift and go to state 71
    operand4                       shift and go to state 73
    operand3                       shift and go to state 60
    array_element                  shift and go to state 25
    literal                        shift and go to state 75
    boolean_literal                shift and go to state 54
    expression                     shift and go to state 56
    identifier                     shift and go to state 57
    integer_literal                shift and go to state 58
    location                       shift and go to state 80
    builtin_name                   shift and go to state 40
    array_primitive_value          shift and go to state 82
    array_slice                    shift and go to state 20
    procedure_call                 shift and go to state 15
    result                         shift and go to state 62
    primitive_value                shift and go to state 81
    parenthesized_expression       shift and go to state 79
    dereferenced_reference         shift and go to state 29
    value_array_element            shift and go to state 63
    conditional_expression         shift and go to state 84
    operand0                       shift and go to state 65
    character_literal              shift and go to state 66
    operand1                       shift and go to state 55
    referenced_location            shift and go to state 67
    call_action                    shift and go to state 85
    operand2                       shift and go to state 68
    character_string_literal       shift and go to state 69
    builtin_call                   shift and go to state 3

state 17

    (7) statement -> procedure_statement .
